--- a/src/java/resources/msjs_en_GB.properties
+++ b/src/java/resources/msjs_en_GB.properties
@@ -2,9 +2,9 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-procesador=Procesador
-Memoria=Memoria
-Usuario=Usuario
-iniciar_sesi\u00f3n=Iniciar sesi\u00f3n
-idioma=Idioma
-\ iniciar\ sesi\u00f3n=Iniciar sesi\u00f3n
+procesador=processor
+Memoria=Memory
+Usuario=User
+iniciar_sesi\u00f3n=Login
+idioma=Language
+\ iniciar\ sesi\u00f3n=Login
